# RnD-Project

./: README.md
master_slave_bilateral/: package.xml  setup.cfg  setup.py
master_slave_bilateral/master_slave_bilateral/: bilateral_control.py  bilateral_control_v2.py  commands.txt  hybrid_bilateral_node.py  testmotion.py
master_slave_control/: command.txt  package.xml  setup.cfg  setup.py
master_slave_control/launch/: mirror.launch.py  mirror_launch.py
master_slave_control/master_slave_control/: mirror_nodes.py  mirror_nodes_inverted.py
pybullet_mirror/: full_bilateral_control.py  inverse_mirror_sim.py  mirror_sim_pybullet.py
